# smart-style

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/models/: embedding.py
backend/app/core/pipelines/: clothing.py  outfit.py
backend/app/manager/: database.py  openai.py  stability.py
backend/app/models/: response.py  strucuted_data.py
backend/app/utils/: image.py  prompt.py
frontend/: .env.example  .gitignore  d.type.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/clothing/: route.ts
frontend/src/app/api/outfit/: route.ts
frontend/src/app/components/: chat.tsx  loading.tsx  settings.tsx
frontend/src/app/services/: clothing.service.ts
frontend/src/app/store/: loading.store.ts  messages.store.ts
supabase/: config.toml
supabase/migrations/: 20241213053136_alter_column_embedding.sql  20241213061202_functions_match_clothing_outfit_return.sql
